--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -96,6 +96,10 @@ input[type='number']::-webkit-outer-spin-button {
 	}
 }
 
+.card-shadow {
+	@apply shadow-xl;
+}
+
 .content-section {
 	@apply mx-auto w-full max-w-7xl px-4 sm:px-6 lg:px-8;
 }
@@ -106,6 +110,25 @@ input[type='number']::-webkit-outer-spin-button {
 
 .content-uppercase {
 	@apply font-semibold uppercase tracking-widest;
+}
+
+.feature-list-item {
+	@apply mt-12 first:mt-0;
+	page-break-inside: avoid;
+	-webkit-column-break-inside: avoid;
+	break-inside: avoid;
+}
+
+.feature-grid {
+	@apply gap-12;
+	grid-column: max/max 2;
+	grid-column-start: max;
+	grid-column-end: 2 max;
+	justify-content: center;
+	counter-reset: section;
+	list-style-type: none;
+	-webkit-column-width: 16rem;
+	column-width: 16rem;
 }
 
 .header-link-active {
