--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -149,7 +149,7 @@ mark,
 }
 
 .minimal-scrollbar {
-	@apply scrollbar-thin scrollbar-track-zinc-800 scrollbar-thumb-zinc-600;
+	@apply scrollbar-thin scrollbar-track-zinc-100 scrollbar-thumb-zinc-500 dark:scrollbar-track-zinc-800 dark:scrollbar-thumb-zinc-600;
 }
 
 .mt-content {
